# cuckoofs

./: .gitignore  CMakeLists.txt  Dockerfile  NOTICE  README.md  build.sh
.github/workflows/: build.yml  install_dependencies.sh  run_test.sh  smoke_test.sh
cloud_native/cuckoo_cm/: cuckoo_cm_cn.py  cuckoo_cm_dn.py
cloud_native/cuckoo_cm/cm/: cuckoo_cm.py
cloud_native/cuckoo_cm/postgres/: postgresql.py
cloud_native/cuckoo_cm/utils/: filesystem.py
cmake/: Flatbuffers.cmake  Protobuf.cmake
common/src/buffer/: dir_open_instance.cpp
common/src/cm/: cuckoo_cm.cpp
common/src/conf/: cuckoo_config.cpp  property_key.cpp
common/src/include/: cuckoo_code.h  cuckoo_definition.h
common/src/init/: cuckoo_init.cpp
common/src/log/: logging.cpp
common/src/read_stream/: read_stream.cpp
common/src/stats/: cuckoo_stats.cpp
common/src/write_stream/: stream_assembler.cpp
config/: config.json
cuckoo/: Makefile  cuckoo--1.0.sql  cuckoo.control  cuckoo_init.c
cuckoo/connection_pool/: brpc_server.cpp  connection_pool.c  cuckoo_meta_rpc.cpp  pg_connection.cpp  pg_connection_pool.cpp
cuckoo/control/: control_flag.c  control_func.c  hook.c
cuckoo/dir_path_shmem/: dir_path_hash.c
cuckoo/distributed_backend/: distributed_backend_cuckoo.c  remote_comm_cuckoo.c
cuckoo/include/: cuckoo_config.h
cuckoo/include/connection_pool/: brpc_server.h  connection_pool.h  connection_pool_config.h  cuckoo_meta_rpc.h  pg_connection.h  pg_connection_pool.h  task.h
cuckoo/include/control/: control_flag.h  hook.h
cuckoo/include/dir_path_shmem/: dir_path_hash.h
cuckoo/include/distributed_backend/: distributed_backend_cuckoo.h  remote_comm.h  remote_comm_cuckoo.h
cuckoo/include/metadb/: directory_table.h  foreign_server.h  inode_table.h  meta_handle.h  meta_process_info.h  meta_serialize_interface_helper.h  metadata.h  shard_table.h  xattr_table.h
cuckoo/include/transaction/: cuckoo_distributed_transaction.h  transaction.h  (+1 more)
cuckoo/metadb/: directory_table.c  foreign_server.c  inode_table.c  meta_handle.c  meta_plain_interface.c  meta_serialize_interface.c  meta_serialize_interface_helper.cpp  shard_table.c  xattr_table.c
cuckoo/transaction/: cuckoo_distributed_transaction.c  transaction.c  transaction_cleanup.c
cuckoo/utils/: cuckoo_shmem_allocator.c  error_code.c  path_parse.c  rwlock.c  serialized_data.c  utils.c
cuckoo_client/: CMakeLists.txt  fuse_main.cpp
cuckoo_client/src/: connection.cpp  cuckoo_meta.cpp  inner_cuckoo_meta.cpp  router.cpp  serialized_data.c
cuckoo_client/src/include/: connection.h  cuckoo_meta.h  inner_cuckoo_meta.h
cuckoo_store/: CMakeLists.txt
cuckoo_store/src/brpc/: brpc_main.cpp
cuckoo_store/src/connection/: cuckoo_io_client.cpp  node.cpp
cuckoo_store/src/cuckoo_store/: cuckoo_store.cpp
cuckoo_store/src/disk_cache/: disk_cache.cpp
cuckoo_store/src/include/brpc/: brpc_server.h
cuckoo_store/src/include/connection/: cuckoo_io_client.h  node.h
cuckoo_store/src/include/cuckoo_store/: cuckoo_store.h
cuckoo_store/src/include/util/: utils.h
cuckoo_store/src/storage/: obs_storage.cpp
cuckoo_store/src/util/: file_lock.cpp  utils.cpp
deploy/ansible/: README.md  cuckootest.yml  inventory
deploy/client/: cuckoo_client_config.sh  cuckoo_client_start.sh  cuckoo_client_stop.sh
deploy/meta/: cuckoo_meta_config.sh  cuckoo_meta_start.sh  cuckoo_meta_stop.sh
docs/: ads-deployment.md  design.md  enable-obs.md
patches/: postgres.patch
remote_connection_def/fbs/: cuckoo_meta_param.fbs  cuckoo_meta_response.fbs
remote_connection_def/proto/: brpc_io.proto  cuckoo_meta_rpc.proto
remote_connection_def/remote_connection_utils/: error_code_def.h  serialized_data.h
tests/: CMakeLists.txt
tests/cuckoo_store/: CMakeLists.txt  test_cuckoo_store.cpp  test_cuckoo_store.h  test_cuckoo_store_threaded.cpp  test_node.cpp  test_node.h  test_read_stream.cpp
(+19 files in other folders)
